# scitacean

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  genindex.html  index.html  justfile  objects.inv  output.json  output.txt  py-modindex.html  pyproject.toml  release-notes.html  search.html  searchindex.js  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-review.yml  docs.yml  nightly_at_main_lower_bound.yml  release.yml  test.yml
_modules/: index.html
_modules/scitacean/: _base_model.html  _profile.html  client.html  datablock.html  dataset.html  error.html  file.html  filesystem.html  logging.html  model.html  pid.html  thumbnail.html  typing.html
_modules/scitacean/testing/: client.html  docs.html  strategies.html  transfer.html
_modules/scitacean/testing/backend/: _backend.html  _pytest_helpers.html  config.html  fixtures.html  seed.html
_modules/scitacean/testing/sftp/: fixtures.html
_modules/scitacean/testing/ssh/: fixtures.html
_modules/scitacean/transfer/: copy.html  link.html  select.html  sftp.html  ssh.html
_modules/scitacean/util/: formatter.html
_sources/developer/: coding-conventions.rst  dependency-management.rst  getting-started.rst  index.rst  testing.rst
_sources/reference/: index.rst
_sources/user-guide/: downloading.ipynb  installation.rst  testing.ipynb  uploading.ipynb
_static/: documentation_options.js
_static/css/: custom.css
developer/: coding-conventions.html  dependency-management.html  getting-started.html  index.html  testing.html
docs/: .gitignore  conf.py  index.rst  release-notes.rst  version.py
docs/_static/: custom.css
docs/_static/css/: custom.css
docs/_templates/: doc_version.html  scitacean-class-template.rst  scitacean-dataclass-template.rst  scitacean-module-template.rst  scowl-module-template.rst
docs/about/: about.rst  contributing.rst  index.rst
docs/developer/: coding-conventions.rst  dependency-management.rst  getting-started.rst  index.rst  testing.rst
docs/reference/: classes.rst  developer-documentation.rst  free-functions.rst  index.rst  modules.rst
docs/reference/developer/: coding-conventions.rst  dependencies.rst  deployment.rst  getting-started.rst  index.rst
docs/user-guide/: classes-and-concepts.rst  downloading.ipynb  getting-started.rst  index.rst  installation.rst  testing.ipynb  uploading.ipynb
reference/: index.html
requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt  docs.in  docs.txt  mypy.in  mypy.txt  static.in  static.txt  test.in  test.txt  wheels.txt
requirements-pydantic1/: base.in  base.txt  test.in  test.txt
requirements-pydantic2/: base.in  base.txt  test.in  test.txt
src/scitacean/: __init__.py  _base_model.py  _dataset_fields.py  _merge_datasets.py  _profile.py  _utils.py  client.py  datablock.py  dataset.py  error.py  file.py  filesystem.py  logging.py  metadata.py  model.py  pid.py  profile.py  thumbnail.py  typing.py  warning.py
src/scitacean/_html_repr/: __init__.py  _attachment_html.py  _common_html.py  _dataset_html.py  _resources.py  resources.py
src/scitacean/_html_repr/styles/: attachment.css  common.css  dataset.css
src/scitacean/_html_repr/templates/: attachment_field_repr.html.template  attachment_repr.html.template  dataset_field_repr.html.template  dataset_repr.html.template  files_repr.html.template  metadata_repr.html.template
src/scitacean/_internal/: __init__.py  dataclass_wrapper.py  docker.py  file_counter.py  jwt.py  orcid.py  pydantic_compat.py
src/scitacean/_profile/: __init__.py  _common.py  _ess.py
src/scitacean/ontology/: __init__.py  expands_techniques.json.bz2
src/scitacean/plugins/: __init__.py  _common.py  file_metadata.py
src/scitacean/testing/: __init__.py  _pytest_helpers.py  client.py  docs.py  strategies.py  transfer.py
src/scitacean/testing/backend/: __init__.py  _backend.py  _pytest_helpers.py  config.py  docker-compose-backend-template.yaml  fixtures.py  seed.py
src/scitacean/transfer/: __init__.py  _util.py  copy.py  ess.py  link.py  select.py  sftp.py  ssh.py  util.py
src/scitacean/util/: credentials.py  formatter.py
src/scowl/: __init__.py  _utils.py  dataset.py  file.py  metadata.py
tests/: __init__.py  backend_test.py  client_test.py  conftest.py  dataset_fields_test.py  dataset_fields_tests.py  dataset_test.py  download_test.py  file_test.py  filesystem.py  filesystem_test.py  merge_datasets_test.py  model_test.py  ontology_test.py  profile_test.py  scicatclient_test.py  thumbnail_test.py  upload_test.py
tests/client/: attachment_client_test.py  client_test.py  datablock_client_test.py  dataset_client_test.py  proposal_client_test.py  query_client_test.py  sample_client_test.py
tests/common/: __init__.py  backend.py  docker-compose-ssh-server.yaml  docker.py  files.py  ssh_server.py
tests/data/: __init__.py  datasets.json  orig_datablocks.json
tests/html_repr/: html_repr_test.py
tests/testing/: strategies_test.py
tests/transfer/: copy_test.py  link_test.py  select_transfer_test.py  sftp_test.py  ssh.py  ssh_test.py
tests/util/: credentials_test.py  formatter.py  formatter_test.py
tools/: generate_dataset_fields.py
tools/model-generation/: README.md  dataset.py  generate.py  generate_models.py  model.py  util.py
tools/model-generation/spec/: __init__.py  data-file.yml  datablock.yml  dataset-fields.yml  dataset-lifecycle.yml  dataset.py  dataset.yml  field-name-overrides.yml  field-type-overrides.yml  field-validations.yml  masked-fields.yml  mongo-queryable.yml  orig-datablock.yml  ownable.yml  schema.py  technique.yml
tools/model-generation/templates/: __init__.py  dataset.py.template  dataset_fields.py.jinja  field_construction.py.template  field_spec.py.template  model.py.jinja  model.py.template
tools/ontologies/: expands_techniques.py
tools/templates/: dataset_fields.py.in
user-guide/: classes-and-concepts.html  downloading.html  index.html  installation.html  testing.html  uploading.html
(+13 files in other folders)
