[metadata]
name = scowl
author = Scowl contributors (https://github.com/SciCatProject/scowl)
description = High-level interface for SciCat
license = BSD
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scicatproject.github.io/scowl
project_urls =
    Bug Tracker = https://github.com/SciCatProject/scowl/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyscicat
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
scowl = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203
extend-select = B904
