[metadata]
name = scitacean
author = Scitacean contributors (https://github.com/SciCatProject/scitacean)
description = High-level interface for SciCat
license = BSD
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SciCatProject/scitacean
project_urls =
    Documentation = https://scicatproject.github.io/scitacean
    Bug Tracker = https://github.com/SciCatProject/scitacean/issues
    Source = https://github.com/SciCatProject/scitacean
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
install_requires =
    fabric
    pyscicat
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
scitacean = py.typed

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203
extend-select = B904
